# esp32-h2

./: Cargo.toml  MATTER_THREAD_ESP32C6_FIXES.md  Makefile  README.md  SKILL.md
.cargo/: config.toml
src/: dev_att.rs  main.rs
